# updated-magink-dapp

./: asset-manifest.json  index.html
contract/: .gitignore  Cargo.toml  lib.rs
contract/magink_wizard/: Cargo.toml  lib.rs
frontend/: .env  .env.example  package.json
frontend/src/assets/metadata/: magink-wizard.metadata.json  magink.metadata.json
frontend/src/components/: Form.tsx  FormContainer.tsx
frontend/src/const/: index.ts
frontend/src/contexts/: MaginkContract.tsx
frontend/src/hooks/: useSubmitHandler.ts
static/js/: main.b4b75cb6.js  main.b4b75cb6.js.LICENSE.txt
