[package]
name = "magink"
version = "0.1.0"
authors = ["Bolaji Ahmad"]
edition = "2021"

[dependencies]
ink = { version = "4.2.1", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = [
    "derive",
] }
scale-info = { version = "2.6", default-features = false, features = [
    "derive",
], optional = true }
openbrush = { tag = "4.0.0-beta", git = "https://github.com/727-Ventures/openbrush-contracts", default-features = false, features = [
    "psp34",
    "ownable",
] }

[dev-dependencies]
ink_e2e = "4.1.0"
magink_wizard = { path = "./magink_wizard", default-features = false, features = [
    "ink-as-dependency",
] }

[lib]
path = "lib.rs"

[workspace]
members = ["magink_wizard"]

[features]
default = ["std"]
std = ["ink/std", "scale/std", "scale-info/std"]
ink-as-dependency = []
e2e-tests = []
